--- a/2024Q1/查理五世.md
+++ b/2024Q1/查理五世.md
@@ -1,1 +1,14 @@
 #历史 [[欧洲中世纪]]
+
+查理五世联合银行家富格贿赂选帝侯，成为神罗皇帝。
+英国国王亨利八世 和法王弗朗索瓦谈判联合反对亨利五世，谈判破裂。
+
+米兰争夺 
+1525 帕维亚战役 弗朗索瓦被俘
+1526签马德里条约
+
+1529 法国战败再次签条约放弃 佛兰德，博甘地，米兰
+
+1538年 签10年和平协议
+1547年弗朗索瓦趋势，亨利二世继任 
+1558年查理五世去世，哈布斯堡家族分家 弟弟费迪南继承神罗，儿子费利佩继承西班牙 佛兰德 博甘地 意大利
