--- a/2024Q1/世界近代史.md
+++ b/2024Q1/世界近代史.md
@@ -1,6 +1,10 @@
 #历史 [[神罗]][[大话西方美术史]]
 
 # 16世纪
+大航海
+宗教改革
+文艺复兴
+
 
 ## 西拔牙大航海时代
 1492 哥伦布发现新大陆
@@ -31,6 +35,10 @@
 
 
 # 17世纪
+>[!important]+ 王权 与 基督教的斗争中逐渐占上风 -- 30年战争哈布斯堡签妥协合约 威斯特伐利亚
+>开明君主专制时期 路易14
+英国领先一步，1649年推翻斯图亚特王朝查理一世，1688年确立了君主立宪
+
 
 教权神授 - 君权神授
 
@@ -79,6 +87,13 @@
 **三十年战争**（德语：Dreißigjähriger Krieg；1618年－1648年）是由[神圣罗马帝国](https://zh.wikipedia.org/wiki/%E7%A5%9E%E5%9C%A3%E7%BD%97%E9%A9%AC%E5%B8%9D%E5%9B%BD "神圣罗马帝国")的[内战](https://zh.wikipedia.org/wiki/%E5%86%85%E6%88%98 "内战")演变而成的一场大规模欧洲战争。战争以[波希米亚](https://zh.wikipedia.org/wiki/%E6%B3%A2%E5%B8%8C%E7%B1%B3%E4%BA%9A "波希米亚")人反抗[哈布斯堡家族](https://zh.wikipedia.org/wiki/%E5%93%88%E5%B8%83%E6%96%AF%E5%A0%A1%E7%8E%8B%E6%9C%9D "哈布斯堡王朝")统治为肇始，最后以哈布斯堡家族战败并签订世界首个国际公约《[威斯特伐利亚和约](https://zh.wikipedia.org/wiki/%E5%A8%81%E6%96%AF%E7%89%B9%E4%BC%90%E5%88%A9%E4%BA%9A%E5%92%8C%E7%BA%A6 "威斯特伐利亚和约")》而告终。这场战争使各[日耳曼邦国](https://zh.wikipedia.org/wiki/%E7%A5%9E%E5%9C%A3%E7%BD%97%E9%A9%AC%E5%B8%9D%E5%9B%BD%E7%9A%84%E9%82%A6%E5%9B%BD "神圣罗马帝国的邦国")的人口损失约25-40%；[路德城维滕贝格](https://zh.wikipedia.org/wiki/%E8%B7%AF%E5%BE%B7%E5%9F%8E%E7%BB%B4%E6%BB%95%E8%B4%9D%E6%A0%BC "路德城维滕贝格")75%人口阵亡，[波美拉尼亚](https://zh.wikipedia.org/wiki/%E6%B3%A2%E7%BE%8E%E6%8B%89%E5%B0%BC%E4%BA%9E%E5%85%AC%E5%9C%8B "波美拉尼亚公国")65%的人口阵亡，[西里西亚](https://zh.wikipedia.org/wiki/%E8%A5%BF%E9%87%8C%E8%A5%BF%E4%BA%9E "西里西亚")25%的人口阵亡，[德意志](https://zh.wikipedia.org/wiki/%E5%BE%B7%E6%84%8F%E5%BF%97 "德意志")各[诸侯国](https://zh.wikipedia.org/wiki/%E8%AB%B8%E4%BE%AF%E5%9C%8B "诸侯国")男性有将近50%阵亡，包括平民有约800万人死亡。
 
 # 18世纪
+君权膨胀的时期
+
+俄国改革，进入近代国家行列
+神罗7年战争，普鲁士 英国 vs 奥地利 法国  后来 西班牙也加入支持奥地利
+英国进一步崛起，取代西班牙的地位
+
+18世纪末 法国大革命 （启蒙运动）， 王权开始动摇。
 ## 彼得大帝
 为[俄罗斯帝国](https://zh.wikipedia.org/wiki/%E4%BF%84%E7%BE%85%E6%96%AF%E5%B8%9D%E5%9C%8B)[罗曼诺夫王朝](https://zh.wikipedia.org/wiki/%E7%BD%97%E6%9B%BC%E8%AF%BA%E5%A4%AB%E7%8E%8B%E6%9C%9D "罗曼诺夫王朝")[沙皇](https://zh.wikipedia.org/wiki/%E6%B2%99%E7%9A%87 "沙皇")（1682年—1725年）及[皇帝](https://zh.wikipedia.org/wiki/%E4%BF%84%E7%BD%97%E6%96%AF%E5%90%9B%E4%B8%BB%E4%B8%96%E7%B3%BB%E5%9B%BE "俄罗斯君主世系图")（1721年—1725年）。在位期间力行欧式改革，使[俄罗斯近代化](https://zh.wikipedia.org/wiki/%E5%BD%BC%E5%BE%97%E5%A4%A7%E5%B8%9D%E6%94%B9%E9%9D%A9 "彼得大帝改革")，定都[圣彼得堡](https://zh.wikipedia.org/wiki/%E8%81%96%E5%BD%BC%E5%BE%97%E5%A0%A1 "圣彼得堡")。
 ![[Pasted image 20240404151334.png]]
@@ -115,6 +130,10 @@
 
 [[拿破仑]]
 # 19世纪
+王权衰弱 人权加强
+普鲁士 统一 德国
+意大利建国
+
 
 >[!note]+ **维也纳会议**
 >（法语：Le congrès de Vienne）是从1814年9月18日到1815年6月9日之间在[奥地利](https://zh.wikipedia.org/wiki/%E5%A5%A5%E5%9C%B0%E5%88%A9 "奥地利")[维也纳](https://zh.wikipedia.org/wiki/%E7%BB%B4%E4%B9%9F%E7%BA%B3 "维也纳")的外交会议。本次会议由奥地利政治家[克莱门斯·文策尔·冯·梅特涅](https://zh.wikipedia.org/wiki/%E5%85%8B%E8%90%8A%E9%96%80%E6%96%AF%C2%B7%E9%A6%AE%C2%B7%E6%A2%85%E7%89%B9%E6%B6%85 "克莱门斯·冯·梅特涅")主持，其目的在于解决由[法国大革命战争](https://zh.wikipedia.org/wiki/%E6%B3%95%E5%9B%BD%E5%A4%A7%E9%9D%A9%E5%91%BD%E6%88%98%E4%BA%89 "法国大革命战争")和[拿破仑战争](https://zh.wikipedia.org/wiki/%E6%8B%BF%E7%A0%B4%E4%BB%91%E6%88%98%E4%BA%89 "拿破仑战争")导致的一系列关键问题，保证欧洲的长久和平。会议的基本原则是“正统主义”和“势力均衡”，目标不仅包括恢复战前国界，还包括重新调节各列强的权力，使他们能够相互平衡并保持和平。参会者主要是保守派，反对共和主义和革命。法国失去了在前一段时间征服的所有领土，而普鲁士、奥地利和俄罗斯则获得了大量的领土——普鲁士吞并了西部的一些德意志小国，并获得了40%的[萨克森王国](https://zh.wikipedia.org/wiki/%E8%90%A8%E5%85%8B%E6%A3%AE%E7%8E%8B%E5%9B%BD "萨克森王国")的领土；奥地利获得了威尼斯和北意大利的大部；俄罗斯则获得了[波兰的一部分](https://zh.wikipedia.org/wiki/%E5%8D%8E%E6%B2%99%E5%85%AC%E5%9B%BD "华沙公国")。在数月之前，荷兰王国被建立起来，并包括了部分过去的奥地利领土，这一部分领土于1830年成为比利时。
